[gd_scene load_steps=2 format=3 uid="uid://dw0wchmhnh8bu"]

[ext_resource type="Script" path="res://content/src/menus/@widgets/nav_bar/nav_bar.gd" id="1"]

[node name="VNavBar" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="Tabs" type="VBoxContainer" parent="Margin/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="Margin"]
layout_mode = 2
focus_mode = 0
mouse_filter = 2
flat = true

[node name="Divider" type="TextureRect" parent="."]
visible = false
layout_mode = 2
expand_mode = 1
stretch_mode = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_entered" from="Margin" to="." method="_on_Margin_focus_entered"]
[connection signal="pressed" from="Margin/Back" to="." method="_on_Back_pressed"]
